syntax = "proto3";

package ionscale.v1;

import "ionscale/v1/iam.proto";

option go_package = "github.com/jsiebens/ionscale/pkg/gen/ionscale/v1;ionscalev1";

message Tailnet {
  uint64 id = 1;
  string name = 2;
}

message CreateTailnetRequest {
  string name = 1;
  IAMPolicy iam_policy = 2;
}

message CreateTailnetResponse {
  Tailnet tailnet = 1;
}

message GetTailnetRequest {
  uint64 id = 1;
}

message GetTailnetResponse {
  Tailnet tailnet = 1;
}

message ListTailnetsRequest {}

message ListTailnetsResponse {
  repeated Tailnet tailnet = 1;
}

message DeleteTailnetRequest {
  uint64 tailnet_id = 1;
  bool force = 2;
}

message DeleteTailnetResponse {}

message GetDERPMapRequest {
  uint64 tailnet_id = 1;
}

message GetDERPMapResponse {
  bytes value = 1;
}

message SetDERPMapRequest {
  uint64 tailnet_id = 1;
  bytes value = 2;
}

message SetDERPMapResponse {
  bytes value = 1;
}

message ResetDERPMapRequest {
  uint64 tailnet_id = 1;
}

message ResetDERPMapResponse {}

message EnableFileSharingRequest {
  uint64 tailnet_id = 1;
}

message EnableFileSharingResponse {}

message DisableFileSharingRequest {
  uint64 tailnet_id = 1;
}

message DisableFileSharingResponse {}

message EnableServiceCollectionRequest {
  uint64 tailnet_id = 1;
}

message EnableServiceCollectionResponse {}

message DisableServiceCollectionRequest {
  uint64 tailnet_id = 1;
}

message DisableServiceCollectionResponse {}

message EnableSSHRequest {
  uint64 tailnet_id = 1;
}

message EnableSSHResponse {}

message DisableSSHRequest {
  uint64 tailnet_id = 1;
}

message DisableSSHResponse {}
